Read input for exercice 3

--- a/Ex3_No_Change/Makefile
+++ b/Ex3_No_Change/Makefile
@@ -1,5 +1,5 @@
-SRC=ex1_lawn_mower.cpp
-TARGET=ex1
+SRC=ex3_no_change.cpp
+TARGET=ex3
 CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
 CPP=g++
 $(TARGET): $(SRC)
