--- a/Ex4_Morse/Makefile
+++ b/Ex4_Morse/Makefile
@@ -1,5 +1,5 @@
-SRC=ex1_lawn_mower.cpp
-TARGET=ex1
+SRC=ex4_morse.cpp
+TARGET=ex4
 CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
 CPP=g++
 $(TARGET): $(SRC)
