--- a/Ex2_Goldbachs/Makefile
+++ b/Ex2_Goldbachs/Makefile
@@ -1,5 +1,5 @@
-SRC=ex1_lawn_mower.cpp
-TARGET=ex1
+SRC=ex2_goldbachs.cpp
+TARGET=ex2
 CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
 CPP=g++
 $(TARGET): $(SRC)
