--- a/Week_2/Ex4_Water_Storage/Makefile
+++ b/Week_2/Ex4_Water_Storage/Makefile
@@ -1,6 +1,6 @@
 SRC=ex4_water_storage.cpp
 TARGET=ex4
-CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
+CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -g
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
