Exercice 2 doesn\'t work. I should order the rules

--- a/Week_2/Ex2_Project_File_Dependencies/Makefile
+++ b/Week_2/Ex2_Project_File_Dependencies/Makefile
@@ -1,6 +1,6 @@
 SRC=ex2_makefile.cpp
 TARGET=ex2
-CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
+CPPFLAGS=-lm -lcrypt -g -std=c++11 -pipe -DONLINE_JUDGE
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
