--- a/Week_2/Ex5_Solitaire/Makefile
+++ b/Week_2/Ex5_Solitaire/Makefile
@@ -1,6 +1,6 @@
 SRC=ex5_solitaire.cpp
 TARGET=ex5
-CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
+CPPFLAGS=-lm -lcrypt -g -std=c++11 -pipe -DONLINE_JUDGE
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
