Correct a mistake in makefile In exercice 5, I read the entry and I calculate the ppcm

--- a/Week_3/Ex5_Men_at_Work/Makefile
+++ b/Week_3/Ex5_Men_at_Work/Makefile
@@ -1,5 +1,5 @@
-SRC=ex5_man_at_work.cpp
-TARGET=ex4
+SRC=ex5_men_at_work.cpp
+TARGET=ex5
 CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -g
 CPP=g++
 $(TARGET): $(SRC)
