--- a/Week_3/Ex4_Consecutives_ones/Makefile
+++ b/Week_3/Ex4_Consecutives_ones/Makefile
@@ -1,6 +1,6 @@
 SRC=ex4_consecutives_ones.cpp
 TARGET=ex4
-CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2
+CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2 -g
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
