--- a/Week_3/Ex5_Men_at_Work/Makefile
+++ b/Week_3/Ex5_Men_at_Work/Makefile
@@ -1,6 +1,6 @@
 SRC=ex5_men_at_work.cpp
 TARGET=ex5
-CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -g
+CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2 -Wall -Wextra
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
