Exercice : fight the heat accepted

--- a/Week_4/Ex3207_Fighting_the_heat/Makefile
+++ b/Week_4/Ex3207_Fighting_the_heat/Makefile
@@ -1,7 +1,7 @@
 NAME=ex3207
 SRC=$(NAME).cpp
 TARGET=$(NAME).bin
-CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2 -g
+CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -g
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
