Ex 2679 Left Laby ready

--- a/Week_4/Ex_11516_wifi/Makefile
+++ b/Week_4/Ex_11516_wifi/Makefile
@@ -1,5 +1,5 @@
 SRC=ex11516_wifi.cpp
-TARGET=ex11516
+TARGET=ex11516.bin
 CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2 -g
 CPP=g++
 $(TARGET): $(SRC)
