--- a/Week_4/Ex_11516_wifi/Makefile
+++ b/Week_4/Ex_11516_wifi/Makefile
@@ -4,3 +4,5 @@ CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -O2 -g
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
+test.bin: test.cpp
+	$(CPP) $(CPPFLAGS) $< -o $@
