--- a/Week_1/Ex4_Morse/Makefile
+++ b/Week_1/Ex4_Morse/Makefile
@@ -1,6 +1,6 @@
-SRC=ex4_morse.cpp
+SRC=ex4_morse_my_solution_bis.cpp
 TARGET=ex4
-CPPFLAGS=-lm -lcrypt -O2 -std=c++11 -pipe -DONLINE_JUDGE
+CPPFLAGS=-lm -lcrypt -std=c++11 -pipe -DONLINE_JUDGE -g
 CPP=g++
 $(TARGET): $(SRC)
 	$(CPP) $(CPPFLAGS) $< -o $@
